--- a/css/style.css
+++ b/css/style.css
@@ -281,6 +281,14 @@ nav {
     list-style: none;
 }
 
+li.org {
+    display: none;
+}
+
+li.visible {
+    display: inline-block;
+}
+
 .dot {
     display: inline-block;
     margin-right: 1rem;
@@ -297,6 +305,12 @@ nav {
 
 .dot:hover {
     background-color: #ea6c56;
+}
+
+.dots{
+    width: 100%;
+    text-align: center;
+    margin-left: 0;
 }
 
 footer {
